회원 가입 이메일 인증 구현 작성

--- a/src/main/resources/templates/front/member/join.html
+++ b/src/main/resources/templates/front/member/join.html
@@ -12,6 +12,7 @@
             <dt th:text="#{이메일}"></dt>
             <dd>
                 <input type="text" name="email" th:field="*{email}">
+                <button type="button" id="email_verify" th:text="#{인증하기}"></button>
                 <div class="error" th:each="err : ${#fields.errors('email')}" th:text="${err}"></div>
             </dd>
         </dl>
