--- a/src/main/resources/templates/mobile/member/login.html
+++ b/src/main/resources/templates/mobile/member/login.html
@@ -14,6 +14,11 @@
         <input type="password" name="password" th:placeholder="#{비밀번호}">
         <div class="error" th:if="${session.NotBlank_password != null}" th:text="${session.NotBlank_password}"></div>
 
+        <div>
+            <input type="checkbox" name="autoLogin" value="true" id="autoLogin">
+            <label for="autoLogin" th:text="#{자동_로그인}"></label>
+        </div>
+
         <button type="submit" th:text="#{로그인}"></button>
 
         <div class="error" th:if="${session.Global_error != null}" th:text="${session.Global_error}"></div>
