--- a/src/main/resources/static/front/css/calendar/style.css
+++ b/src/main/resources/static/front/css/calendar/style.css
@@ -8,5 +8,9 @@ main { position: fixed; top: 0; left: 0; width: 100%; height: 100%; display: fle
 .yoils > li { width: 0; flex-grow: 1; padding: 10px; text-align: center; }
 .yoils li + li { border-left: 1px solid #ccc; }
 .days { border: 1px solid #ccc; border-top: 0; display: flex; width: 100%; flex-wrap: wrap; flex-grow: 1;  }
-.days li { font-size: 0.9rem; width: calc(100% / 7); padding: 10px; text-align: center; }
+.days li { width: calc(100% / 7); padding: 10px; font-size: 0.8rem; }
 .days li + li { border-left: 1px solid #ccc; border-top: 1px solid #ccc; }
+.days li:nth-of-type(7n+1) { color: red; }
+.days li:nth-of-type(7n) { color: blue; }
+.days .day { width: 28px; height: 28px; border-radius: 50%; text-align: center; border: 1px solid #222; line-height: 26px; cursor: pointer; }
+.days .day:hover, .days .day.on { background: #222; color: #fff; }
