--- a/src/main/resources/static/common/css/popup_style.css
+++ b/src/main/resources/static/common/css/popup_style.css
@@ -8,3 +8,5 @@ dl { display: flex; width: 100%; margin: 0; align-items: center; }
 dt { width: 130px;  }
 dd { width: calc(100% - 130px); padding: 0; margin: 0; }
 a { color:#222; text-decoration: none; }
+
+.dn { display: none !important; }
