--- a/src/main/resources/templates/front/layouts/main.html
+++ b/src/main/resources/templates/front/layouts/main.html
@@ -24,6 +24,7 @@
 
     <th:block layout:fragment="addCss"></th:block>
 
+    <script th:src="@{/common/js/layer.js?v={v}(v=${siteConfig.cssJsVersion})}"></script>
     <script th:src="@{/common/js/common.js?v={v}(v=${siteConfig.cssJsVersion})}"></script>
     <script th:each="jsFile : ${addCommonScript}"
             th:src="@{/common/js/{file}.js?v={v}(file=${jsFile}, v=${siteConfig.cssJsVersion})}"></script>
@@ -40,5 +41,6 @@
     <main layout:fragment="content"></main>
 
     <footer th:replace="~{front/outlines/footer::common}"></footer>
+    <iframe name="ifrmProcess" class="dn"></iframe>
 </body>
 </html>
