--- a/src/main/resources/templates/admin/config/api.html
+++ b/src/main/resources/templates/admin/config/api.html
@@ -9,11 +9,21 @@
 
     <form name="frmSave" method="post" th:action="@{/admin/config/api}" autocomplete="off" th:object="${apiConfig}">
         <h2>공공 API 설정</h2>
-        <table class="table_cols">
+        <table class="table_cols mb30">
             <tr>
-                <th width="180">인증키(Encoding></th>
+                <th width="180">인증키(Encoding)</th>
                 <td>
                     <input type="text" name="publicOpenApiKey" th:field="*{publicOpenApiKey}">
+                </td>
+            </tr>
+        </table>
+
+        <h2>카카오 API 앱키</h2>
+        <table class="table_cols">
+            <tr>
+                <th width="180">Javascript 키</th>
+                <td>
+                    <input type="text" name="kakaoJavascriptKey" th:field="*{kakaoJavascriptKey}">
                 </td>
             </tr>
         </table>
