--- a/src/main/resources/templates/front/layouts/main.html
+++ b/src/main/resources/templates/front/layouts/main.html
@@ -24,6 +24,8 @@
 
     <th:block layout:fragment="addCss"></th:block>
 
+    <th:block layout:fragment="addCommonScript"></th:block>
+
     <script th:src="@{/common/js/common.js?v={v}(v=${siteConfig.cssJsVersion})}"></script>
     <script th:each="jsFile : ${addCommonScript}"
             th:src="@{/common/js/{file}.js?v={v}(file=${jsFile}, v=${siteConfig.cssJsVersion})}"></script>
