--- a/src/main/resources/templates/front/etc/map/test1.html
+++ b/src/main/resources/templates/front/etc/map/test1.html
@@ -6,7 +6,13 @@
     <th:block th:replace="~{common/_kakao_map_script::script}"></th:block>
 </th:block>
 <main layout:fragment="content">
-
+    <h2>마커 한개 표시</h2>
     <div id="map"></div>
+    <span id="text"></span>
+
+    <h2>마커 여러개 표시</h2>
+    <div id="map2"></div>
+    <span id="text2"></span>
+
 </main>
 </html>
