--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -19,3 +19,11 @@ a { color:#222; text-decoration: none; }
 #layer_popup { position: fixed; z-index: 101; background: #fff; border-radius: 5px; overflow: hidden; }
 #layer_popup iframe { border: 0; }
 /* 팝업 공통 E */
+
+.image1_tpl_box { border: 1px solid #222; position: relative; width: 250px; }
+.image1_tpl_box > .inner { width: 100%; height: 250px; }
+.image1_tpl_box .remove { position: absolute; top: 0; right: 0; display: block; width: 15px; height: 15px; background: #222; text-align: center; line-height: 15px; cursor: pointer; }
+.image1_tpl_box .remove > i { color: #fff; font-size: 1rem; }
+
+/* 위지윅 에디터 공통 */
+.ck-editor__editable { min-height: 300px; }
