--- a/src/main/resources/templates/admin/outlines/_side.html
+++ b/src/main/resources/templates/admin/outlines/_side.html
@@ -7,5 +7,10 @@
         <a th:href="@{/admin/member}" th:classappend="${menuCode} == 'member' ? 'on'">
             <i class="xi-users"></i> 회원관리
         </a>
+
+        <a th:href="@{/admin/product}" th:classappend="${menuCode} == 'product' ? 'on'">
+            <i class="xi-list"></i> 상품 관리
+        </a>
+
     </aside>
 </html>
