--- a/src/main/resources/templates/admin/layouts/main.html
+++ b/src/main/resources/templates/admin/layouts/main.html
@@ -27,6 +27,7 @@
 
     <th:block layout:fragment="addCommonScript"></th:block>
 
+    <script th:src="@{/common/js/layer.js?v={v}(v=${siteConfig.cssJsVersion})}"></script>
     <script th:src="@{/common/js/common.js?v={v}(v=${siteConfig.cssJsVersion})}"></script>
     <script th:each="jsFile : ${addCommonScript}"
             th:src="@{/common/js/{file}.js?v={v}(file=${jsFile}, v=${siteConfig.cssJsVersion})}"></script>
@@ -47,5 +48,6 @@
             <section layout:fragment="content"></section>
         </section>
     </main>
+    <iframe name="ifrmProcess" class="dn"></iframe>
 </body>
 </html>
