--- a/src/main/resources/templates/front/test/popup.html
+++ b/src/main/resources/templates/front/test/popup.html
@@ -7,6 +7,7 @@
     <input type="text" id="sdate">
 
     <script>
+        console.log(commonLib);
         const { popup } = commonLib;
         const sdate = document.getElementById("sdate");
         sdate.onfocus = () => popup.open('/calendar?targetId=sdate', 350, 400);
