--- a/src/main/resources/static/admin/css/style.css
+++ b/src/main/resources/static/admin/css/style.css
@@ -89,3 +89,5 @@ select { border: 1px solid #d5d5d5; height: 35px; }
 .pagination .page.on { background: #596b99; color: #fff; }
 .pagination .page + .page { margin-left: 3px; }
 /* 페이징 공통 E */
+
+.no_data { text-align: center; padding: 50px 0 !important;  }
