--- a/src/main/resources/templates/admin/product/category.html
+++ b/src/main/resources/templates/admin/product/category.html
@@ -50,10 +50,10 @@
                     <input type="checkbox" class="checkall" data-target-name="chk" id="checkall">
                     <label for="checkall"></label>
                 </th>
-                <th width="200">분류코드</th>
-                <th width="300">분류명</th>
-                <th width="200">진열가중치</th>
-                <th width="200">사용여부</th>
+                <th width="180">분류코드</th>
+                <th width="200">분류명</th>
+                <th width="150">진열가중치</th>
+                <th width="180">사용여부</th>
                 <th></th>
             </tr>
             </thead>
@@ -72,11 +72,11 @@
                     <input type="number" th:name="${'listOrder_' + status.index}" th:value="*{listOrder}">
                 </td>
                 <td align="center">
-                    <input type="radio" th:name="${'active_' + status.index}" th:checked="*{active}" th:id="${'active_' + status.index}" value="true">
-                    <label th:for="${'active_' + status.index}">사용</label>
+                    <input type="radio" th:name="${'active_' + status.index}" th:checked="*{active}" th:id="${'active_true_' + status.index}" value="true">
+                    <label th:for="${'active_true_' + status.index}">사용</label>
 
-                    <input type="radio" th:name="${'active_' + status.index}" th:checked="*{!active}" th:id="${'active_' + status.index}" value="false">
-                    <label th:for="${'active_' + status.index}">미사용</label>
+                    <input type="radio" th:name="${'active_' + status.index}" th:checked="*{!active}" th:id="${'active_false_' + status.index}" value="false">
+                    <label th:for="${'active_false_' + status.index}">미사용</label>
                 </td>
                 <td>
                     <a th:href="@{/admin/product?cateCd={cateCd}(cateCd=*{cateCd})}" class="sbtn">상품관리</a>
