--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -10,9 +10,21 @@ dd { width: calc(100% - 130px); padding: 0; margin: 0; }
 a { color:#222; text-decoration: none; }
 
 /* 여백 공통 */
+.mb10 { margin-bottom: 10px; }
+.mb20 { margin-bottom: 20px; }
 .mb30 { margin-bottom: 30px; }
 
 .dn { display: none !important; }
+
+/* 너비 공통 */
+.w100 { width: 100px !important; }
+.w200 { width: 200px !important; }
+.w300 { width: 300px !important; }
+
+/* 정렬 공통 */
+al { text-align: left !important; }
+ar { text-align: right !important; }
+ac { text-align: center !important; }
 
 /* 팝업 공통 S */
 #layer_dim { position: fixed; z-index: 100; top: 0; left: 0; width: 100%; height: 100%; background:rgba(0, 0, 0, 0.7); cursor: pointer; }
