--- a/src/main/resources/templates/mobile/layouts/main.html
+++ b/src/main/resources/templates/mobile/layouts/main.html
@@ -12,7 +12,7 @@
         <th:block th:if="${pageTitle != null}" th:text="${pageTitle + ' - '}"></th:block>
         <th:block th:if="${siteConfig.siteTitle != null}" th:text="${siteConfig.siteTitle}"></th:block>
     </title>
-
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" type="text/css" th:href="@{/common/css/style.css?v={v}(v=${siteConfig.cssJsVersion})}">
     <link rel="stylesheet" type="text/css"
           th:each="cssFile : ${addCommonCss}"
