--- a/src/main/resources/templates/common/_file_tpl.html
+++ b/src/main/resources/templates/common/_file_tpl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <script type="text/html" id="image1_tpl" th:fragment="image1_tpl">
-    <div class="image1_tpl_box" id="file_[seq]">
+    <div class="image1_tpl_box" id="file_[seq]" data-url="[imageUrl]">
         <a th:href="@{/file/delete/[seq]}" onclick="return confirm('정말 삭제하시겠습니까?');" class="remove" target="ifrmProcess">
             <i class="xi-close"></i>
         </a>
