--- a/src/main/resources/templates/front/product/view.html
+++ b/src/main/resources/templates/front/product/view.html
@@ -63,7 +63,7 @@
 
 
                 <div class="selected_products">
-                    <input type="hidden" name="selected_nums" value="0">
+                    <input type="hidden" name="selectedNums" value="0">
                     <div class="product_name" th:text="*{name}"></div>
 
                     <div class="option_ea">
