장바구니 처리

--- a/src/main/resources/templates/front/product/view.html
+++ b/src/main/resources/templates/front/product/view.html
@@ -84,9 +84,9 @@
 
                 <!--// summary -->
                 <div class="btns">
-                    <button type="button" th:text="#{찜하기}" class="product_action" data-mode="wish"></button>
-                    <button type="button" th:text="#{장바구니}" class="product_action" data-mode="cart"></button>
-                    <button type="button" th:text="#{구매하기}" class="product_action"  data-mode="order"></button>
+                    <button type="button" th:text="#{찜하기}" class="product_action" data-mode="WISH"></button>
+                    <button type="button" th:text="#{장바구니}" class="product_action" data-mode="CART"></button>
+                    <button type="button" th:text="#{구매하기}" class="product_action"  data-mode="DIRECT"></button>
                 </div>
             </form>
         </div>
