--- a/src/main/resources/static/front/css/recipe/style.css
+++ b/src/main/resources/static/front/css/recipe/style.css
@@ -1,4 +1,4 @@
-.recipe_form { width: 400px; margin: 0 auto; padding: 0 10px; }
+.recipe_form { width: 400px; margin: 0 auto; }
 /* 공통 */
 .stit { font-weight: 500; margin: 15px 0 10px; }
 
@@ -23,3 +23,15 @@ textarea { border: 1px solid #d5d5d5; width: 100%; resize: none; height: 100px; 
 .estimate_times input[type='radio']+label { display: inline-block; border: 2px solid #222; background: #fff; color: #222; font-size: 0.95rem; padding: 0 10px; height: 30px; line-height: 26px; cursor: pointer; }
 .estimate_times input[type='radio']:checked+label { background: #222; color: #fff; }
 /* 예상 소요시간 E */
+
+/* 기준량 S */
+.amount_box { display: flex; align-items: center; }
+.amount_box input[type='number'] { width: 50px; height: 35px; text-align: right; }
+.amount_box button { height: 35px; }
+/* 기준량 E */
+
+/* 추가 버튼 */
+.add_input_item { display: block; width: 100%; height: 40px; }
+
+/* 완료 버튼 */
+.recipe_form .submit_btn { display: block; width: 100%; height: 45px; margin-top: 10px; }
