--- a/src/main/resources/templates/front/recipe/add.html
+++ b/src/main/resources/templates/front/recipe/add.html
@@ -6,7 +6,7 @@
     <form name="frmSave" method="post" th:action="@{/recipe/save}" autocomplete="off">
         <input type="hidden" name="mode" value="add">
         <th:block th:replace="~{front/recipe/_form::form}"></th:block>
-        <button type="submit" th:text="#{완료}"></button>
+        <button type="submit" th:text="#{완료}" class="submit_btn"></button>
     </form>
 </main>
 </html>
