--- a/src/main/resources/templates/front/cart/_items.html
+++ b/src/main/resources/templates/front/cart/_items.html
@@ -4,7 +4,7 @@
     <table class="cart_items">
         <thead>
         <tr>
-            <th>
+            <th th:if="${mode == null || mode != 'order' }">
                 <input type="checkbox" class="checkall" data-target-name="chk" id="checkall">
                 <label for="checkall"></label>
             </th>
@@ -17,16 +17,16 @@
         </thead>
         <tbody>
         <tr th:if="*{items == null || items.isEmpty()}">
-            <td colspan="7" th:text="#{장바구니가_비어있습니다.}"></td>
+            <td th:colspan="${mode == null || mode != 'order' ? 7 : 6 }" th:text="#{장바구니가_비어있습니다.}"></td>
         </tr>
         <tr th:unless="*{items == null || items.isEmpty()}"
             th:each="item, status : *{items}" th:object="${item}">
-            <td>
-                <input type="hidden" th:name="${'seq_' + status.index}" th:value="*{seq}">
+            <td th:if="${mode == null || mode != 'order'}">
                 <input type="checkbox" name="chk" th:value="${status.index}" th:id="${'chk_' + status.index}">
                 <label th:for="${'chk_' + status.index}"></label>
             </td>
             <td>
+                <input type="hidden" th:name="${'seq_' + status.index}" th:value="*{seq}">
                 <a th:href="@{/product/detail/{seq}(seq=*{product.seq})}">
                     <th:block th:utext="*{@utils.printThumb(listImage, 50, 50, 'product_image')}"></th:block>
                 </a>
@@ -38,7 +38,7 @@
                 <span th:text="*{product.salePrice >= 1000 ? #numbers.formatInteger(product.salePrice, 3, 'COMMA') : product.salePrice}"></span>
                 <th:block th:text="#{원}"></th:block>
             </td>
-            <td>
+            <td th:if="${mode == null || mode != 'order'}">
                 <input type="number" th:name="${'ea_' + status.index}" th:value="*{ea}">
                 <button type="button" class="change_ea down">
                     <i class="xi-minus"></i>
@@ -46,6 +46,10 @@
                 <button type="button" class="change_ea up">
                     <i class="xi-plus"></i>
                 </button>
+            </td>
+            <td th:unless="${mode == null || mode != 'order'}">
+                <th:block th:text="*{ea}"></th:block>
+                <th:block th:text="#{개}"></th:block>
             </td>
             <td>
                 <span th:text="*{totalPrice >= 1000 ? #numbers.formatInteger(totalPrice, 3, 'COMMA') : totalPrice}"></span>
