--- a/src/main/resources/templates/front/order/order_form.html
+++ b/src/main/resources/templates/front/order/order_form.html
@@ -67,10 +67,47 @@
                 </div>
             </dd>
         </dl>
-
+        <dl>
+            <dt th:text="#{배송_메세지}"></dt>
+            <dd>
+                <input type="text" name="deliveryMemo">
+            </dd>
+        </dl>
 
         <h2 th:text="#{결제_정보}"></h2>
 
+        <dl>
+            <dt th:text="#{상품합계}"></dt>
+            <dd>
+                <span th:text="*{totalPrice >= 1000 ? #numbers.formatInteger(totalPrice, 3, 'COMMA') : totalPrice}"></span>
+                <th:block th:text="#{원}"></th:block>
+            </dd>
+        </dl>
+        <dl>
+            <dt th:text="#{배송비}"></dt>
+            <dd>
+                <th:block th:if="*{totalDeliveryPrice > 0}">
+                    <span th:text="*{totalDeliveryPrice >= 1000 ? #numbers.formatInteger(totalDeliveryPrice, 3, 'COMMA') : totalDeliveryPrice}"></span>
+                    <th:block th:text="#{원}"></th:block>
+                </th:block>
+                <th:block th:unless="*{totalDeliveryPrice > 0}" th:text="#{무료배송}"></th:block>
+            </dd>
+        </dl>
+
+        <dl th:if="*{totalDiscount > 0}">
+            <dt th:text="#{상품할인}"></dt>
+            <dd>
+                <span th:text="*{totalDiscount >= 1000 ? #numbers.formatInteger(totalDiscount * -1, 3, 'COMMA') : totalDiscount * -1}"></span>
+                <th:block th:text="#{원}"></th:block>
+            </dd>
+        </dl>
+        <dl>
+            <dt th:text="#{결제금액}"></dt>
+            <dd>
+                <span th:text="*{payPrice >= 1000 ? #numbers.formatInteger(payPrice, 3, 'COMMA') : payPrice}"></span>
+                <th:block th:text="#{원}"></th:block>
+            </dd>
+        </dl>
         <h2 th:text="#{약관_동의}"></h2>
     </form>
 </main>
