--- a/src/main/resources/templates/admin/product/display.html
+++ b/src/main/resources/templates/admin/product/display.html
@@ -3,7 +3,13 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{admin/layouts/main}">
 <section layout:fragment="content">
-
+    <div class="flex sb aic">
+        <h1>상품 진열 관리</h1>
+        <button type="button" class="add_display sbtn">
+            <i class="xi-plus"></i>
+            진열 추가
+        </button>
+    </div>
 
     <script type="text/html" id="tpl">
         <table class="table_cols">
