상품진열관리

--- a/src/main/resources/templates/admin/product/display.html
+++ b/src/main/resources/templates/admin/product/display.html
@@ -18,6 +18,12 @@
     <script type="text/html" id="tpl">
         <table class="table_cols" id="display_[num]">
             <tr>
+                <th>진열코드</th>
+                <td>
+                    [num]
+                </td>
+            </tr>
+            <tr>
                 <th>
                     진열 명칭
                     <button type="button" class="sbtn remove_display" data-num="[num]">
