상품진열관리

--- a/src/main/resources/templates/admin/product/display.html
+++ b/src/main/resources/templates/admin/product/display.html
@@ -16,9 +16,9 @@
     </ul>
 
     <script type="text/html" id="tpl">
-        <table class="table_cols" id="display_[num]">
+        <table class="table_cols mb30" id="display_[num]">
             <tr>
-                <th>진열코드</th>
+                <th width="180">진열코드</th>
                 <td>
                     [num]
                 </td>
