상품진열관리

--- a/src/main/resources/templates/admin/product/display.html
+++ b/src/main/resources/templates/admin/product/display.html
@@ -38,7 +38,7 @@
             <tr>
                 <th>
                     진열상품
-                    <button type="button" class="sbtn add_product" data-num="[num]">
+                    <button type="button" class="sbtn add_product" data-num="[num]" onclick="commonLib.popup.open('/admin/product/popup_select?target=items_[num]', 550, 600)">
                         <i class="xi-plus"></i> 상품선택
                     </button>
                 </th>
